# NBAComp

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
data/processed/: y_test.csv  y_train.csv  y_val.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/: imputer.joblib  model_1.joblib  scaler.joblib  smote.joblib  xgb_model_2.joblib  xgb_model_best.joblib  xgb_model_best_24.joblib  xgb_model_best_25.joblib  xgb_model_best_new.joblib
notebooks/: 1_baseline.ipynb  Das-Kiran-24580348-week1_xgboost.ipynb  Das-Kiran-24580348-week2_xgboost.ipynb  Das-Kiran-24580348-week3_xgboost.ipynb  best_model.ipynb  data_preprocessing.ipynb  interim-notebook-various-models.ipynb  model_1.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: EXPERIMENT REPORT- KiranDas.docx
reports/figures/: final_model_outputs_week1.csv  final_model_outputs_week2.csv  final_model_outputs_week3.csv  final_model_outputs_week3_31stAug.csv  final_model_outputs_week4.csv  final_model_outputs_week4_24Aug.csv  final_model_outputs_week4_25Aug.csv  final_model_outputs_week4_26Aug.csv
src/data/: make_dataset.py  preprocessing.py
src/models/: data_loader.py  load_model.py  predict_model.py  train_model.py
src/visualization/: visualize.py
